resume_content_updated

--- a/terraform/cloud-resume.html
+++ b/terraform/cloud-resume.html
@@ -151,8 +151,8 @@
 
     <h2>PERSONAL PROJECT EXPERIENCE/LEARNING</h2>
     <p>
-        I aim at designing, implementing, and managing scalable and cost-effective cloud computing solutions for organisations.
-        Hence, I have created a self-learning journey for myself and have implemented the below. <br> Details are in my <a href="https://dev.to/fidelisesq"target="_blank">blog post here:</a>
+        I aim to design, implement, and manage scalable and cost-effective cloud solutions for organisations.
+        Hence, I have embarked on a self-learning journey, implementing projects that involve automating deployments, continuous integration/continuous deployment (CI/CD), and infrastructure as code.<br> Details are in my <a href="https://dev.to/fidelisesq"target="_blank">blog post here:</a>
     </p>
     <ol>
         <li>
